# VidMix

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  pyproject.toml  renderer.js  requirements.txt  server.py  styles.css
web/: README.md  app.js  index.html  requirements.txt  styles.css
