[project]
name = "vidmix-web"
version = "0.1.0"
description = "Local fallback Python server to host VidMix web frontend"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.dependencies]
Flask = "^2.4.0"
pyyaml = "^6.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
